test/type-signature-missing-effect.err.expect
test/type-signature-missing-effect.ktn:1:20: compile error: unexpected )
test/type-signature-missing-effect.ktn:1:20: note: expecting effect type
